# dsp

./: .baldr.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  conan_provider.cmake  conandata.yml  conanfile.py
cmake/: dependencies.cmake  settings.cmake  targets.cmake  test-disco.cmake  version.cmake
doc/: arch-tcp.puml  cmd.adoc  dev-guide.adoc  dsp-env.adoc  dsp-guide.adoc  dsp.adoc  env.adoc  perf.adoc  test.adoc  user-guide.adoc
dsp-tools/: CMakeLists.txt  kafka-client.cpp  tcp-client.cpp  tracy-sandbox.cpp  tracy_alloc.cpp
env/: buildenv.Dockerfile  docker-compose.yml  prometheus.yml  service.Dockerfile
helm/dsp-svc/: Chart.yaml  values.yaml
helm/dsp-svc/templates/: NOTES.txt  _helpers.tpl  configmap-dsp.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
helm/dsp-svc/templates/tests/: test-connection.yaml
include/: CMakeLists.txt
include/dsp/: cache.hh  ckafka.hh  daemon.hh  dsp.hh  handler.hh  http.hh  interfaces.hh  kafka.hh  main.hh  metrics.hh  profiler.hh  router.hh  stat.hh  sys.hh  tcp.hh  tcp_handler.hh  token_bucket.hh
libdsp/: CMakeLists.txt  conanfile.py  version.cmake
libdsp/cmake/: config.cmake.in  version.cmake
libdsp/libdsp/: CMakeLists.txt  cache.hh  cache.hpp  daemon.hh  daemon.hpp  dsp.hh  dsp.hpp  grpc.hh  handler.hh  handler.hpp  interfaces.hh  interfaces.hpp  kafka.hh  kafka.hpp  main.hpp  metrics.hh  metrics.hpp  profiler.cc  profiler.cpp  router.hh  router.hpp  router.test.cpp  stat.hh  stat.hpp  sys.hpp  task.hpp  tcp-bare.hh  tcp.cc  tcp.cpp  tcp.hh  tcp.hpp  tcp_handler.hpp  test.cmake
res/: dsp-k2k.yaml  dsp.yaml  grafana-dashboard-dsp.json
scripts/: all.stage.sh  build.stage.sh  cert.stage.sh  clean.stage.sh  create-perf-report.stage.sh  deploy.stage.sh  deps.stage.sh  doc.stage.sh  dump-code-blocks.awk  dump-code-blocks.sh  ft-kafka-consumer.stage.sh  ft-kafka-producer.stage.sh  ft.sh  gen-ssl-certs.sh  install-nova.sh  package.stage.sh  perf-dsp-k2k.stage.sh  perf-dsp.stage.sh  perf-kafka-consumer.stage.sh  perf-kafka-producer.stage.sh  perf-report.py  perf-tcp.stage.sh  perf.stage.sh  run.sh  rundoc.awk  rundoc.sh  test.sh  test.stage.sh  todo-summary.sh
src/: CMakeLists.txt
src/dsp/: CMakeLists.txt  profiler.cc  tcp.cc
src/protos/: CMakeLists.txt  service.proto
src/svc/: CMakeLists.txt  handler.cc  handler.hh  main.cc  sim.cc
src/tools/: CMakeLists.txt  grpc-client.cc  grpc-server.cc  kafka-client.cc  stat.hh  tcp-client.cc  tracy-sandbox.cc  tracy_alloc.cc  tracy_alloc.hh
svc/: CMakeLists.txt
svc/svc/: CMakeLists.txt  handler.cc  handler.cpp  handler.hh  handler.hpp  main.cc  main.cpp  sim.cc  sim.cpp
tools/: CMakeLists.txt
tools/tools/: kafka-client.cc  tcp-client.cc  tcp-server.cc  tracy-sandbox.cc  tracy_alloc.cc  tracy_alloc.hh
unit-tests/: CMakeLists.txt  router.cc
